<resources>
    <string name="app_name">HealthyDog</string>
    <string name="bDog1">Dog 1</string>
    <string name="tvName">Name</string>
    <string name="tvRasse">Rasse</string>
    <string name="tvGeschlecht">Geschlecht</string>
    <string name="tvGewicht">Gewicht</string>
    <string name="tvGroesse">Grösse</string>
    <string name="tvAlter">Alter</string>
    <string name="bATermin">Arzttermine</string>
    <string name="bImpfung">Impfungen</string>
    <string name="bErnaehrung">Ernährungsplan</string>
    <string name="bScanner">Produktscanner</string>
    <string name="bRezepte">Rezepte</string>
    <string name="bMontag">Montag</string>
    <string name="bDienstag">Dienstag</string>
    <string name="bMittwoch">Mittwoch</string>
    <string name="bDonnerstag">Donnerstag</string>
    <string name="bFreitag">Freitag</string>
    <string name="bSamstag">Samstag</string>
    <string name="bSonntag">Sonntag</string>
    <string name="title_activity_maps">Karte</string>
    <string name="bMaps">Karte</string>
    <string name="tvBeschreibung">Sonnig</string>
    <string name="tvTemp">31</string>
    <string name="tvLF">50%</string>
    <string name="tvDruck">1000mb</string>
    <string name="bNeuesRezept">Rezept Hinzufügen</string>
    <string name="etRezeptname" />
    <string name="bRezHinz">Hinzufügen</string>
    <string name="bRouten">Routen</string>
    <string name="bKarte">Karte</string>
    <string name="bRErstellen">Route erstellen</string>
</resources>
