<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.preim.healthydog.Health.ErnaehrungsplanActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bMontag"
        android:id="@+id/bMontag"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bDienstag"
        android:id="@+id/bDienstag"
        android:layout_below="@+id/bMontag"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bMittwoch"
        android:id="@+id/bMittwoch"
        android:layout_below="@+id/bDienstag"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bDonnerstag"
        android:id="@+id/bDonnerstag"
        android:layout_below="@+id/bMittwoch"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bFreitag"
        android:id="@+id/bFreitag"
        android:layout_below="@+id/bDonnerstag"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:text="@string/bSamstag"
        android:id="@+id/bSamstag"
        android:layout_below="@+id/bFreitag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="80dp"
        android:layout_marginTop="-10dp"
        android:text="@string/bSonntag"
        android:id="@+id/bSonntag"
        android:layout_below="@+id/bSamstag"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
