<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.preim.healthydog.menuAktivity.HundepassActivity">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/chapeau"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvName"
        android:id="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvRasse"
        android:id="@+id/tvRasse"
        android:layout_alignStart="@+id/tvName"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvGeschlecht"
        android:id="@+id/tvGeschlecht"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/tvRasse"
        android:layout_alignStart="@+id/tvRasse"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvGewicht"
        android:id="@+id/tvGewicht"
        android:layout_below="@+id/tvGeschlecht"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvGroesse"
        android:id="@+id/tvGroesse"
        android:layout_below="@+id/tvGewicht"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvAlter"
        android:id="@+id/tvAlter"
        android:layout_below="@+id/tvGroesse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:text="@string/bATermin"
        android:id="@+id/bATermin"
        android:layout_below="@+id/tvAlter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:text="@string/bImpfung"
        android:id="@+id/bImpfung"
        android:layout_below="@+id/bATermin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
