<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.preim.healthydog.menuAktivity.RoutenActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/bRouten"
        android:id="@+id/bRouten"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/bRErstellen"
        android:id="@+id/bRErstellen"
        android:layout_below="@+id/bRouten"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/bKarte"
        android:id="@+id/bKarte"
        android:layout_below="@+id/bRErstellen"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
